[project]
name = "fastapi-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.138.2",
    "pydantic[email]>=2.13.4",
    "redis>=8.0.1",
    "uuid>=1.30",
    "uvicorn[standard]>=0.49.0",
]
